Tue Oct 22 14:53:11 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c: exterminate Zombies.
	  There is a bug that T_ZOMBIE objects are not collected.
	  Because there is a pass to miss finalizer postponed job
	  with multi-threading. This patch solve this issue.

	* vm_trace.c (rb_postponed_job_register_one): set
	  RUBY_VM_SET_POSTPONED_JOB_INTERRUPT(th) if another same job
	  is registered.
	  There is a possibility to remain a postponed job without
	  interrupt flag.

	* vm_trace.c (rb_postponed_job_register_one): check interrupt
	  carefully.

	* vm_trace.c (rb_postponed_job_register_one): use additional space
	  to avoid buffer full.

	* gc.c (gc_finalize_deferred_register): check failure.

	* thread.c (rb_threadptr_execute_interrupts): check
	  `postponed_job_interrupt' immediately.  There is a possibility
	  to miss this flag.

Tue Oct 22 12:11:16 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check if the given CFLAGS and LDFLAGS are working, and
	  bail out early if not.

Tue Oct 22 00:06:57 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_exists_p): warn deprecated name.  [Bug #9041]

Mon Oct 21 23:57:53 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (load_encoding): should preserve outer errinfo, so that
	  expected exception may not be lost.  [ruby-core:57949] [Bug #9038]

Sun Oct 20 15:41:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_reopen): create a new, temporary FD via rb_sysopen and
	  call rb_cloexec_dup2 on it to atomically replace the file fptr->fd
	  points to.  This leaves no possible window where fptr->fd is invalid
	  to userspace (even for any threads running w/o GVL).  based on the
	  patch by Eric Wong <normalperson@yhbt.net> at [ruby-core:57943].
	  [Bug #9036]

Sun Oct 20 15:29:05 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_syserr_fail_path_in): new function split from
	  rb_sys_fail_path_in to raise SystemCallError without errno.
